# galapix-ont

./: CMakeLists.txt  NEWS  README.md  SConscript  TODO
arch/: PKGBUILD
src/database/: database.cpp  database.hpp  file_database.cpp  file_database.hpp  file_tile_database.cpp  file_tile_database.hpp  tile_database.cpp  tile_database.hpp  tile_entry_store_statement.hpp
src/galapix/: database_message.hpp  database_thread.cpp  database_thread.hpp  database_tile_provider.hpp  galapix.cpp  galapix.hpp  image.cpp  image.hpp  options.hpp  random_layouter.hpp  regular_layouter.cpp  regular_layouter.hpp  tight_layouter.cpp  tight_layouter.hpp  tile_provider.hpp  viewer.cpp  viewer.hpp  viewer_state.cpp  workspace.cpp  workspace.hpp
src/jobs/: file_entry_generation_job.cpp  file_entry_generation_job.hpp  tile_generation_job.hpp
src/plugins/: imagemagick.cpp  imagemagick.hpp  png.cpp
src/sdl/: sdl_framebuffer.cpp  sdl_framebuffer.hpp  sdl_viewer.cpp  sdl_viewer.hpp
src/tools/: pan_tool.cpp  pan_tool.hpp  zoom_rect_tool.cpp
src/util/: filesystem.cpp  software_surface_factory.cpp  url.cpp
test/: pnm_test.cpp
